[project]
name = "claude-slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygithub>=2.9.0",
    "python-dotenv>=1.2.2",
    "slack-bolt>=1.28.0",
]

[tool.uv.workspace]
members = [
    "projects/snake-game",
    "projects/family_project",
]
